--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,33 @@
-openai
-tiktoken
-astroid         
-Click           
-colorama        
-fastapi         
-gunicorn        
-h11             
-isort           
-lazy-object-proxy
-mccabe          
-pydantic        
-pylint          
-six             
-starlette       
-uvicorn         
-websockets      
-wrapt           
-langcorn
-langchain==0.0.312
-pandas
-python-dotenv
-google-cloud-bigquery
-pybigquery
-pyarrow
-google-cloud-bigquery-storage
-networkx
-python-jose[cryptography]
-passlib[bcrypt]
-typing
-cloud-sql-python-connector
-pymysql
-python-multipart
-requests
-cloud-sql-python-connector[pymysql] 
-sqlalchemy==1.4.50
-sql_metadata
-pymongo
-sqlparse
-pytz
-db_dtypes
-google-cloud-bigquery
-pandas
-numpy
-fastapi
-python-multipart
-typing
-scikit-learn
-scipy
-pandas_gbq
+cachetools==5.3.2
+certifi==2023.11.17
+charset-normalizer==3.3.2
+google-api-core==2.15.0
+google-api-python-client==2.111.0
+google-auth==2.25.2
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
+googleapis-common-protos==1.62.0
+httplib2==0.22.0
+idna==3.6
+numpy==1.26.2
+oauthlib==3.2.2
+pandas==2.1.4
+protobuf==4.25.1
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pyparsing==3.1.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
+requests==2.31.0
+requests-oauthlib==1.3.1
+rsa==4.9
+six==1.16.0
+tzdata==2023.3
+uritemplate==4.1.1
+urllib3==2.1.0
+
+
+
+
+
+
